--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,9 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%200.0.2%20(2014-12-08)">Version 0.0.2 (2014-12-08)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.0.1%20(2014-11-18)">Version 0.0.1 (2014-11-18)</a>
       </div>
     </div>
@@ -42,6 +45,33 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.0.2%20(2014-12-08)">
+  <h2>
+    <a href="#version%200.0.2%20(2014-12-08)" name="version%200.0.2%20(2014-12-08)" class="pilcrow">&#182;</a>
+    Version 0.0.2 (2014-12-08)
+  </h2>
+</div>
+
+
+<ul>
+<li>Added support for windows.</li>
+<li>Add wait and retry events.</li>
+<li>Optimized debugging and retry.</li>
+<li>Added retry handling after failure.</li>
+<li>Fixed line length in code.</li>
+<li>Made weight calculation cpu dependent.</li>
+<li>Added nice settings for priorities on os.</li>
+<li>Fine Tuning and documentation.</li>
+<li>Small fixes in debug output.</li>
+<li>Fixed typo bug.</li>
+<li>Moved machine setup into class to make it customizable.</li>
+<li>Finalized process load balancing.</li>
+<li>Added load handling with weight measurement.</li>
+<li>Added changes of success checking in documentation.</li>
+<li>Remove success method and run it automatically.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.0.1%20(2014-11-18)">
