--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,9 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%200.1.0%20(2014-12-08)">Version 0.1.0 (2014-12-08)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.0.2%20(2014-12-08)">Version 0.0.2 (2014-12-08)</a>
       </div>
       <div class="heading h2">
@@ -45,6 +48,19 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.1.0%20(2014-12-08)">
+  <h2>
+    <a href="#version%200.1.0%20(2014-12-08)" name="version%200.1.0%20(2014-12-08)" class="pilcrow">&#182;</a>
+    Version 0.1.0 (2014-12-08)
+  </h2>
+</div>
+
+
+<ul>
+<li>Bug with array clone.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.0.2%20(2014-12-08)">
