--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,18 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%200.1.4%20(2014-12-23)">Version 0.1.4 (2014-12-23)</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%200.1.3%20(2014-12-09)">Version 0.1.3 (2014-12-09)</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%200.1.2%20(2014-12-09)">Version 0.1.2 (2014-12-09)</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%200.1.1%20(2014-12-09)">Version 0.1.1 (2014-12-09)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.1.0%20(2014-12-08)">Version 0.1.0 (2014-12-08)</a>
       </div>
       <div class="heading h2">
@@ -48,6 +60,63 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.1.4%20(2014-12-23)">
+  <h2>
+    <a href="#version%200.1.4%20(2014-12-23)" name="version%200.1.4%20(2014-12-23)" class="pilcrow">&#182;</a>
+    Version 0.1.4 (2014-12-23)
+  </h2>
+</div>
+
+
+<ul>
+<li>Added search for configs in this package.</li>
+<li>Documented the configuration changes.</li>
+<li>Fixed configuration loading.</li>
+<li>Extracted configuration into file.</li>
+<li>Added configuration file.</li>
+<li>Allow newer sub packages.</li>
+</ul>
+
+
+<div class="pilwrap" id="version%200.1.3%20(2014-12-09)">
+  <h2>
+    <a href="#version%200.1.3%20(2014-12-09)" name="version%200.1.3%20(2014-12-09)" class="pilcrow">&#182;</a>
+    Version 0.1.3 (2014-12-09)
+  </h2>
+</div>
+
+
+<ul>
+- 
+</ul>
+
+
+<div class="pilwrap" id="version%200.1.2%20(2014-12-09)">
+  <h2>
+    <a href="#version%200.1.2%20(2014-12-09)" name="version%200.1.2%20(2014-12-09)" class="pilcrow">&#182;</a>
+    Version 0.1.2 (2014-12-09)
+  </h2>
+</div>
+
+
+<ul>
+- 
+</ul>
+
+
+<div class="pilwrap" id="version%200.1.1%20(2014-12-09)">
+  <h2>
+    <a href="#version%200.1.1%20(2014-12-09)" name="version%200.1.1%20(2014-12-09)" class="pilcrow">&#182;</a>
+    Version 0.1.1 (2014-12-09)
+  </h2>
+</div>
+
+
+<ul>
+<li>Bug fixes.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.1.0%20(2014-12-08)">
