--- a/README.md.html
+++ b/README.md.html
@@ -118,7 +118,7 @@ command. It's benefits are:</p>
 <li>use priorities (also on OS level)</li>
 </ul>
 
-<p>It is one of the modules of the <a href="http://alinex.github.io/node-alinex.html">Alinex Universe</a>
+<p>It is one of the modules of the <a href="http://alinex.github.io/node-alinex">Alinex Universe</a>
 following the code standards defined there.</p>
 
 
