--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,12 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%200.1.6%20(2015-02-03)">Version 0.1.6 (2015-02-03)</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%200.1.5%20(2015-01-07)">Version 0.1.5 (2015-01-07)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.1.4%20(2014-12-23)">Version 0.1.4 (2014-12-23)</a>
       </div>
       <div class="heading h2">
@@ -60,6 +66,35 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%200.1.6%20(2015-02-03)">
+  <h2>
+    <a href="#version%200.1.6%20(2015-02-03)" name="version%200.1.6%20(2015-02-03)" class="pilcrow">&#182;</a>
+    Version 0.1.6 (2015-02-03)
+  </h2>
+</div>
+
+
+<ul>
+<li>Added local configs to search path if used as module, also.</li>
+<li>Fixed Spawn initialization to prevent parallel runs.</li>
+<li>Make configcheck public available.</li>
+<li>Spellchecked inline comment.</li>
+</ul>
+
+
+<div class="pilwrap" id="version%200.1.5%20(2015-01-07)">
+  <h2>
+    <a href="#version%200.1.5%20(2015-01-07)" name="version%200.1.5%20(2015-01-07)" class="pilcrow">&#182;</a>
+    Version 0.1.5 (2015-01-07)
+  </h2>
+</div>
+
+
+<ul>
+<li>Fixed search path for own configs.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.1.4%20(2014-12-23)">
