--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -35,12 +35,6 @@
         <a href="#version%200.1.4%20(2014-12-23)">Version 0.1.4 (2014-12-23)</a>
       </div>
       <div class="heading h2">
-        <a href="#version%200.1.3%20(2014-12-09)">Version 0.1.3 (2014-12-09)</a>
-      </div>
-      <div class="heading h2">
-        <a href="#version%200.1.2%20(2014-12-09)">Version 0.1.2 (2014-12-09)</a>
-      </div>
-      <div class="heading h2">
         <a href="#version%200.1.1%20(2014-12-09)">Version 0.1.1 (2014-12-09)</a>
       </div>
       <div class="heading h2">
@@ -55,7 +49,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="version%20changes">
   <h1>
     <a href="#version%20changes" name="version%20changes" class="pilcrow">&#182;</a>
@@ -112,32 +106,6 @@ individual versions:</p>
 <li>Extracted configuration into file.</li>
 <li>Added configuration file.</li>
 <li>Allow newer sub packages.</li>
-</ul>
-
-
-<div class="pilwrap" id="version%200.1.3%20(2014-12-09)">
-  <h2>
-    <a href="#version%200.1.3%20(2014-12-09)" name="version%200.1.3%20(2014-12-09)" class="pilcrow">&#182;</a>
-    Version 0.1.3 (2014-12-09)
-  </h2>
-</div>
-
-
-<ul>
-- 
-</ul>
-
-
-<div class="pilwrap" id="version%200.1.2%20(2014-12-09)">
-  <h2>
-    <a href="#version%200.1.2%20(2014-12-09)" name="version%200.1.2%20(2014-12-09)" class="pilcrow">&#182;</a>
-    Version 0.1.2 (2014-12-09)
-  </h2>
-</div>
-
-
-<ul>
-- 
 </ul>
 
 
