--- a/src/configcheck.coffee.html
+++ b/src/configcheck.coffee.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me on GitHub"></a><div class="background highlight"></div>
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="background highlight"></div>
 <table cellpadding="0" cellspacing="0">
   <tbody>
       <tr>
@@ -104,6 +104,11 @@
       <span class="nv">type: </span><span class="s">&#39;object&#39;</span>
       <span class="nv">allowedKeys: </span><span class="kc">true</span>
       <span class="nv">entries:</span>
+        <span class="nv">balance:</span>
+          <span class="nv">title: </span><span class="s">&quot;Load Balance&quot;</span>
+          <span class="nv">description: </span><span class="s">&quot;a flag indicating if load balancing be done by default&quot;</span>
+          <span class="nv">type: </span><span class="s">&#39;boolean&#39;</span>
+          <span class="nv">default: </span><span class="s">&#39;false&#39;</span>
         <span class="nv">priority:</span>
           <span class="nv">title: </span><span class="s">&quot;Default priority&quot;</span>
           <span class="nv">description: </span><span class="s">&quot;the priority for each process, higher means to run earlier&quot;</span>
