--- a/README.md.html
+++ b/README.md.html
@@ -291,6 +291,8 @@ time (time=retry ^ 3):</p>
 |   9   |     12m |   33m |
 |  10   |     17m |   50m |</p>
 
+<p><img src="src/doc/graph-retry.png" alt="Retry Timeout" title="" /></p>
+
 <p>On each retry the priority will go down giving in favor for other jobs which
 didn't failed.</p>
 
