--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -26,6 +26,9 @@
         <a href="#version%20changes">Version changes</a>
       </div>
       <div class="heading h2">
+        <a href="#version%201.0.0%20(2015-03-19)">Version 1.0.0 (2015-03-19)</a>
+      </div>
+      <div class="heading h2">
         <a href="#version%200.1.6%20(2015-02-03)">Version 0.1.6 (2015-02-03)</a>
       </div>
       <div class="heading h2">
@@ -49,7 +52,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="version%20changes">
   <h1>
     <a href="#version%20changes" name="version%20changes" class="pilcrow">&#182;</a>
@@ -60,6 +63,33 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%201.0.0%20(2015-03-19)">
+  <h2>
+    <a href="#version%201.0.0%20(2015-03-19)" name="version%201.0.0%20(2015-03-19)" class="pilcrow">&#182;</a>
+    Version 1.0.0 (2015-03-19)
+  </h2>
+</div>
+
+
+<ul>
+<li>Make tests faster by checking only two retries.</li>
+<li>Document retry timeout handling.</li>
+<li>Added default check for no stderr output.</li>
+<li>Fixed retry handling to correct count.</li>
+<li>Allow errors to be returned and handled without try.</li>
+<li>Try to handle process close on signals.</li>
+<li>Added logging, tests and use nice settings within valid range.</li>
+<li>Enable debug output to be line oriented.</li>
+<li>Added lines-adapter to better stream output line oriented.</li>
+<li>Restructure to use newer config access and support balance-config.</li>
+<li>Update documentation syntax.</li>
+<li>Small fixes.</li>
+<li>Upgraded dependent packages.</li>
+<li>Fixed gid setting and added input specification.</li>
+<li>Try to fix unknown error thwown bug.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%200.1.6%20(2015-02-03)">
