--- a/README.md.html
+++ b/README.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/READMEmd", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/README.md", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -550,6 +550,7 @@ normal system process (nice=0).</p>
 
 <ul>
 <li><code>config</code> (object) - configuration settings for the machine</li>
+<li><code>configsearch</code> - list of paths to search for config files</li>
 <li><code>time</code> (integer) - current time period</li>
 <li><code>weight</code> (float) - already used weight in this time period</li>
 <li><code>queue</code> (integer) - number of processes in queue</li>
