--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/Changelogmd", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/Changelog.md", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -24,6 +24,9 @@
     <div id="headings">
       <div class="heading h1">
         <a href="#version%20changes">Version changes</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%201.0.1%20(2015-03-19)">Version 1.0.1 (2015-03-19)</a>
       </div>
       <div class="heading h2">
         <a href="#version%201.0.0%20(2015-03-19)">Version 1.0.0 (2015-03-19)</a>
@@ -63,6 +66,19 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%201.0.1%20(2015-03-19)">
+  <h2>
+    <a href="#version%201.0.1%20(2015-03-19)" name="version%201.0.1%20(2015-03-19)" class="pilcrow">&#182;</a>
+    Version 1.0.1 (2015-03-19)
+  </h2>
+</div>
+
+
+<ul>
+<li>Allow to change configsearch path.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%201.0.0%20(2015-03-19)">
