--- a/README.md.html
+++ b/README.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/README.md", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/READMEmd", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -94,7 +94,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="package%3A%20alinex-spawn">
   <h1>
     <a href="#package%3A%20alinex-spawn" name="package%3A%20alinex-spawn" class="pilcrow">&#182;</a>
@@ -278,7 +278,7 @@ know if it got an error you can use the event or callback value or check for:</p
 <p>If a check went wrong the process will be scheduled for retry after the following
 time (time=retry ^ 3):</p>
 
-<p style="font-family:monospace;white-space:pre">| Retry | Timeout | Total |
+<p>| Retry | Timeout | Total |
 |-------|---------|-------|
 |   1   |      1s |    1s |
 |   2   |      8s |    9s |
@@ -416,7 +416,7 @@ it through the number of cpu cores.</p>
 may also have more things to do (meaning they are in the system's queue) as the
 ones just being processed.</p>
 
-<p style="font-family:monospace;white-space:pre">| LOAD | prio 0..1  | quad-core load |     comment for setting    |
+<p>| LOAD | prio 0..1  | quad-core load |     comment for setting    |
 |------|------------|----------------|----------------------------|
 |  0.2 | 0.2 -  0.8 |     0.6 -  3.2 | neither implies the system |
 |  0.5 | 0.4 -  2.0 |     1.6 - 10.0 | minor priority service     |
