--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/Changelogmd", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/Changelog.md", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -24,6 +24,9 @@
     <div id="headings">
       <div class="heading h1">
         <a href="#version%20changes">Version changes</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%201.0.3%20(2015-03-20)">Version 1.0.3 (2015-03-20)</a>
       </div>
       <div class="heading h2">
         <a href="#version%201.0.2%20(2015-03-19)">Version 1.0.2 (2015-03-19)</a>
@@ -58,7 +61,7 @@
     </div>
   </div>
   <div id="sidebar-toggle"></div>
-  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me XXXXXXXXXXXXXXXXXXXX on GitHub"></a><div class="docs markdown">
+  <div id="container" tabindex="0"><a id="fork" href="https://github.com/alinex/node-spawn" title="Fork me on GitHub"></a><div class="docs markdown">
 <div class="pilwrap" id="version%20changes">
   <h1>
     <a href="#version%20changes" name="version%20changes" class="pilcrow">&#182;</a>
@@ -69,6 +72,19 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%201.0.3%20(2015-03-20)">
+  <h2>
+    <a href="#version%201.0.3%20(2015-03-20)" name="version%201.0.3%20(2015-03-20)" class="pilcrow">&#182;</a>
+    Version 1.0.3 (2015-03-20)
+  </h2>
+</div>
+
+
+<ul>
+<li>Added example cpu graph to documentation.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%201.0.2%20(2015-03-19)">
