--- a/Changelog.md.html
+++ b/Changelog.md.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" media="all" href="doc-style.css" />
   <script src="doc-filelist.js"></script>
   <script>
-    var relativeDir = "", thisFile = "home/alex/a3/node-spawn/Changelog.md", defaultSidebar = true;
+    var relativeDir = "", thisFile = "home/alex/a3//Changelog.md", defaultSidebar = true;
   </script>
   <script src="doc-script.js"></script>
   <script src="fileSearch.js"></script>
@@ -24,6 +24,9 @@
     <div id="headings">
       <div class="heading h1">
         <a href="#version%20changes">Version changes</a>
+      </div>
+      <div class="heading h2">
+        <a href="#version%201.0.4%20(2015-03-24)">Version 1.0.4 (2015-03-24)</a>
       </div>
       <div class="heading h2">
         <a href="#version%201.0.3%20(2015-03-20)">Version 1.0.3 (2015-03-20)</a>
@@ -72,6 +75,23 @@
 
 <p>The following list gives a short overview about what is changed between
 individual versions:</p>
+
+
+<div class="pilwrap" id="version%201.0.4%20(2015-03-24)">
+  <h2>
+    <a href="#version%201.0.4%20(2015-03-24)" name="version%201.0.4%20(2015-03-24)" class="pilcrow">&#182;</a>
+    Version 1.0.4 (2015-03-24)
+  </h2>
+</div>
+
+
+<ul>
+<li>Fixed regexp for line separators.</li>
+<li>Reverted carrier module to 0.1.x</li>
+<li>Transform \r and \r\n also into \n making progress bars to output constantly as multiple lines.</li>
+<li>Fixed debug message of cmdline.</li>
+<li>Update carrier submodule.</li>
+</ul>
 
 
 <div class="pilwrap" id="version%201.0.3%20(2015-03-20)">
